@@ -1,6 +1,8 @@
 0.3.2
 -----
 
+- Changed argagg::definition::help and argagg::definition::flags to use
+  std::string instead of const char*
 - Fixed compilation error with clang
 
 0.3.1
